--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Curriculum Vitae a Personal Category Flat Bootstarp Responsive Website Template | Home :: w3layouts</title>
+<title>Iftakharul Alam</title>
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -31,19 +31,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- header -->
 <div class="col-sm-3 col-md-2 sidebar">
 		 <div class="sidebar_top">
-			 <h1>USER NAME</h1> 
+			 <h1>Iftakharul Alam</h1> 
 			 <img src="images/avt.png" alt=""/>
 		 </div>
 		<div class="details">
 			 <h3>PHONE</h3>
-			 <p>+00 234 56 789</p>  	 
+			 <p>+880 16 70752214</p>  	 
 			 <h3>EMAIL</h3>
-			 <p><a href="mailto@example.com">mail@example.com</a></p>
+			 <p><a href="mailto@example.com">bappa2du@gmail.com</a></p>
 			 <address>
 			 <h3>ADDRESS</h3>
-			 <span>Lorem ipsum,</span>
-			 <span>Sed dolor sit,</span>
-			 <span>Praesent porta.</span>
+			 <span>Hajipara,</span>
+			 <span>Rampura,</span>
+			 <span>Dhaka.</span>
 			 </address>
 			 
 		</div>
@@ -145,7 +145,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div>
 		 </div>
 		 <div class="copywrite">
-			 <p>© 2015 Curriculum Vitae All Rights Reseverd | Design by <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+			 <p>© 2015 Iftakharul Alam</p>
 		 </div>
 	 </div>
 </div>
