--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div>
 		 </div>
 		 <div class="copywrite">
-			 <p>© 2015 Iftakharul Alam</p>
+			 <p>© 2015 Iftakharul Bappa</p>
 		 </div>
 	 </div>
 </div>
