--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                 </li>
                                 <li class="media">
                                     <h6><span>Phone</span></h6>
-                                    <p>+88 01670752214</p>
+                                    <p>+88 1537680606</p>
                                 </li>
                                 <li class="media">
                                     <h6><span>Freelance</span></h6>
@@ -385,7 +385,7 @@
         </section>
         <!-- End fun -->
         <!-- Work -->
-        <section id="work" class="section dark-section">
+        <section id="work" class="section dark-section" hidden>
             <div class="container">
                 <div class="row sm-m-25px-b m-35px-b">
                     <div class="col-md-12 text-center">
@@ -481,7 +481,7 @@
         </section>
         <!-- End work -->
         <!-- Testiminails -->
-        <section class="section">
+        <section class="section" hidden>
             <div class="container">
                 <div class="row sm-m-25px-b m-35px-b">
                     <div class="col-md-12 text-center">
@@ -645,8 +645,7 @@
                             </div>
                             <div class="media-body">
                                 <h6 class="dark-color font-alt">My Contact</h6>
-                                <p>Office: +880 1670752214<br>
-                                Office: +004 44444 44444<br></p>
+                                <p>Personal: +880 1537680606</p>
                             </div>
                         </div>
                         <div class="contact-info media">
