--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <span>Resume</span>
                 </a>
             </li>
-            <li>
+            <li style="display:none">
                 <a class="nav-link" href="#work">
                     <span>Portfolio</span>
                 </a>
